Fixes #1328 - Buttons overlap in height graph

--- a/IsraelHiking.Web/sources/application/components/route-statistics.component.scss
+++ b/IsraelHiking.Web/sources/application/components/route-statistics.component.scss
@@ -100,6 +100,10 @@ $buttons-margin: 5px;
 }
 
 @media (max-width: 550px) {
+    .hidden-xs {
+        display: none !important
+    }
+    
     .chart-control-container {
         width: calc(100vw - 2 * #{$control-border});
         height: $container-height-small-screen;
